# stage_proj

./: api.txt  docker-compose.yml
.github/workflows/: main.yml  python-app.yml  qpython-app.yml
api/: Dockerfile  pyproject.toml
api/api_app/: asgi.py  main.py
api/api_app/services/: email.py  goods.py  monitoring.py  users.py
api/api_app/views/: endpoints.py
email_service/: Dockerfile  alembic.ini  pyproject.toml
email_service/migrations/: env.py
email_service/migrations/versions/: cff5c9e90ac9_add_users_table.py
email_service/src/email_service/: asgi.py  config.py  main.py
email_service/src/email_service/models/: __init__.py  templates.py
email_service/src/email_service/views/: templates.py
goods/: Dockerfile  readme  requirements.txt
goods/app/: admin.py  models.py  serializers.py  urls.py  views.py
goods/app/fixtures/: initial_data.json
goods/app/migrations/: 0001_initial.py  0002_auto_20200719_1628.py  0002_auto_20200801_2101.py  0003_auto_20200719_1734.py  0004_auto_20200720_0105.py  0005_auto_20200720_2208.py  0006_auto_20200720_2209.py  (+2 more)
goods/config/: asgi.py  settings.py  urls.py
mon/: Dockerfile  alembic.ini  requirements.txt  start.sh
mon/app_mon/: asgi.py  config.py  main.py
mon/cel/: celer.py  tasks.py
mon/migrations/: env.py
rabbit_auto_queues/: Dockerfile  definitions.json  help.txt
user_service/: Dockerfile  alembic.ini  main.py  requirements.txt
user_service/alembic/: env.py
user_service/app/: model.py  routes.py  swagger.yaml  views.py
user_service/config/: config.py
user_service/migrations/: env.py
(+12 files in other folders)
