[tool.poetry]
name = "api_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
