[tool.poetry]
name = "api_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
httpx = "^0.14.2"
aio_pika = "^6.6.1"
python-multipart = "^0.0.5"
aioredis = "^1.3.1"
python-jose = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
